# OpusAndroid

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/lengyue524/opus_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/opus/: HuyaEncoder.cpp  com_lengyue524_opus_android_opus_OpusDecoder.cpp  com_lengyue524_opus_android_opus_OpusEncoder.cpp
app/src/main/cpp/opus/include/: HuyaEncoder.h  com_lengyue524_opus_android_opus_OpusDecoder.h  com_lengyue524_opus_android_opus_OpusEncoder.h
app/src/main/java/com/lengyue524/opus_android/: AudioCapturer.java  MainActivity.java
app/src/main/java/com/lengyue524/opus_android/opus/: OpusConstants.java  OpusDecoder.java  OpusEncoder.java  OpusPacket.java  OpusUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lengyue524/opus_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opus/: build.gradle
opus/src/androidTest/java/com/lengyue524/opus/: ExampleInstrumentedTest.java
opus/src/main/: AndroidManifest.xml
opus/src/main/cpp/: CMakeLists.txt
opus/src/main/cpp/opus/: HuyaDecoder.cpp  com_lengyue524_opus_OpusDecoder.cpp  com_lengyue524_opus_OpusEncoder.cpp
opus/src/main/cpp/opus/include/: Constants.h  HuyaDecoder.h  com_lengyue524_opus_OpusDecoder.h  com_lengyue524_opus_OpusEncoder.h
opus/src/main/cpp/opus/opus-1.2.1/src/: opus_demo.c
opus/src/main/java/com/lengyue524/opus/: OpusConstants.java  OpusDecoder.java  OpusEncoder.java  OpusPacket.java  OpusUtils.java
opus/src/main/res/values/: strings.xml
opus/src/test/java/com/lengyue524/opus/: ExampleUnitTest.java
